Fix banner on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,9 @@ header h1 {
 .banner {
   display: block;
   margin: 0 auto;
-  min-height: 30vh;
+  /* Prevent image from overflowing on small screens */
+  max-width: 100%;
+  /* Prevent it from getting too tall on widescreens */
   max-height: 400px;
 }
 
